added couple field on sending invitation